fix(wireless): fix delete button alignment and empty search result ui

--- a/src/app/profiles/profile-detail/profile-detail.component.scss
+++ b/src/app/profiles/profile-detail/profile-detail.component.scss
@@ -3,10 +3,10 @@
   margin-bottom: 24px;
 }
 .drag-box {
-  padding: 20px 10px;
+  padding: 10px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
-  display: flex;
+  line-height: 1.3;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
